--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@libsql/client": "^0.17.0",
+    "@pinecone-database/pinecone": "^6.1.4",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "better-auth": "^1.3",
+    "blockhash-core": "^0.1.0",
+    "drizzle-orm": "^0.45.1",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "replicate": "^1.4.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.34.5",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
   },
@@ -35,6 +41,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "postcss": "^8.5.3",
