--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,17 @@
 # Secret used by Better Auth
 BETTER_AUTH_SECRET=""
 
-# Better Auth GitHub OAuth
-BETTER_AUTH_GITHUB_CLIENT_ID=""
-BETTER_AUTH_GITHUB_CLIENT_SECRET=""
+# Better Auth Discord OAuth
+BETTER_AUTH_DISCORD_CLIENT_ID=""
+BETTER_AUTH_DISCORD_CLIENT_SECRET=""
+
+# Replicate
+REPLICATE_API_KEY=""
+
+# Pinecone
+PINECONE_DB=""
+PINECONE_API_KEY=""
+
+# Turso
+TURSO_CONNECTION_URL="libsql://db-name-user.turso.io"
+TURSO_AUTH_TOKEN=""
