--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".\\empchecker\\",
+  "name": "empchecker",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -9,6 +9,8 @@
     "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
@@ -25,6 +27,7 @@
     "@trpc/server": "^11.0.0",
     "better-auth": "^1.3",
     "blockhash-core": "^0.1.0",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "next": "^15.2.3",
     "react": "^19.0.0",
